--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,4 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">CampusLife</string> <!-- 原默认名称改为CampusLife -->
+    <string name="app_name">CampusLife</string>
     <string name="tv_title">Welcome to\nUniversity of Waikato CampusLife</string>
 </resources>
